--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Sachi Tiwari's Portfolio!</title>
+    </head>
+<body>
+    <h1>Sachi Tiwari's Portfolio!</h1>
+    <h2>I am an aspiring Web Developer</h2>
+    <p>These are some of the earliest projects that I have ever done.Extremely thrilled to share them with you!</p>
+    <hr/> 
+    <h3><a href="./public/movie-ranking.html" draggable="true">Movie Ranking Project</a></h3>
+    
+    <img src="./assets/images/SMRP.png" height=400 alt="Movie Ranking Project's preview"/>
+    <hr/>
+    <h3><a href="./public/birthday-invite.html"draggable="true">Birthday Invite Project</a></h3>
+    <img src="./assets/images/BIP.png"height=600 alt="Birthday Invite Project's preview"/>
+    <hr/>
+    <a href="./public/about.html">About Me</a><br/>
+    <a href="./public/contact.html">My Contact Details</a>
+</body>
+</html>
