--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,10 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
+<h1>The Best Movies Accoring to Sachi</h1>
+<h2>My Top 3 movies of all time</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h2>1.Barfi</h2>
+<h3>The way Anurag Basu has potrayed the simplicity and purity of love is commendable. Also really impressed by the whole caste,specially Priyanka.An innocent feel-good movie with an amazing Music score </h3>
+<h2>2.Taare Zameen Par</h2>
+<h3>No words.Just go and watch the movie.If you haven't,what the heck are you doing with your life?<br />Darsheel has all my heart,to play the role with such intrecies at such a young age is praise-worthy and needs to be acknowleged,admired and awarded.
+</h3>
+<h2>3.Dangal</h2>
+<h3>A good 3 hour watch with family.The dedication of all the actors for their craft speaks for itself in this movie.And the adrenaline rush you get while watching the match scenes are definitely something to look forward to.And this being a biography and true story makes it MUCH more exemplary.</h3>>
