--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -7,4 +7,4 @@
 <h3>No words.Just go and watch the movie.If you haven't,what the heck are you doing with your life?<br />Darsheel has all my heart,to play the role with such intrecies at such a young age is praise-worthy and needs to be acknowleged,admired and awarded.
 </h3>
 <h2>3.Dangal</h2>
-<h3>A good 3 hour watch with family.The dedication of all the actors for their craft speaks for itself in this movie.And the adrenaline rush you get while watching the match scenes are definitely something to look forward to.And this being a biography and true story makes it MUCH more exemplary.</h3>>
+<h3>A good 3 hour watch with family.The dedication of all the actors for their craft speaks for itself in this movie.And the adrenaline rush you get while watching the match scenes are definitely something to look forward to.And this being a biography and true story makes it MUCH more exemplary.</h3>
